fixed spacing in top bar for dark blue section

--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@ html {
   }
   #container2{
     /* margin-left: 28px !important; */
-    margin-top: 45px !important;
+    margin-top: 80px !important;
   }
 }  
 
